--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set version = "7.1.0" %}
-{% set ver = version.replace(".", "_") %}
+{% set ver = version.replace(".", "_") + "r" %}
 
 package:
   name: esmpy
