--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,14 @@
 {% set version = "8.0.0" %}
 {% set ver = version.replace(".", "_") %}
+{% set build = 1 %}
+
+# recipe-lint fails if mpi is undefined
+{% set mpi = mpi or 'nompi' %}
+
+{% if mpi == 'mpich' %}
+# prioritize mpich variant, which was previously the only option, via build number
+{% set build = build + 100 %}
+{% endif %}
 
 package:
   name: esmpy
@@ -10,19 +19,37 @@ source:
   sha256: 75c34c41806e703551b6b79566edf34c23f1eebcf821749e5320e860e565d94f
 
 build:
-  number: 0
+  number: {{ build }}
   skip: True  # [win]
 
+  # add build string so packages can depend on
+  # mpi or nompi variants explicitly:
+  # `esmf * mpi_mpich_*` for mpich
+  # `esmf * mpi_*` for any mpi
+  # `esmf * nompi_*` for no mpi
+
+  {% if mpi != 'nompi' %}
+  {% set mpi_prefix = "mpi_" + mpi %}
+  {% else %}
+  {% set mpi_prefix = "nompi" %}
+  {% endif %}
+  string: "{{ mpi_prefix }}_py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ build }}"
+
 requirements:
-  build:
+  host:
     - python
     - numpy
-    - esmf {{ version }}
+    - esmf {{ version }} {{ mpi_prefix }}_*
     - nose
+    - {{ mpi }}  # [mpi != 'nompi']
+    - mpi4py  # [mpi != 'nompi']
   run:
     - python
     - numpy
-    - esmf {{ version }}
+    - esmf {{ version }} {{ mpi_prefix }}_*
+    - {{ mpi }}  # [mpi != 'nompi']
+    - mpi4py  # [mpi != 'nompi']
+    - openssh  # [mpi == 'openmpi']
 
 test:
   imports:
@@ -39,3 +66,4 @@ extra:
     - ocefpaf
     - bekozi
     - rokuingh
+    - xylar
