--- a/.ci_support/linux_mpinompipython2.7.yaml
+++ b/.ci_support/linux_mpinompipython2.7.yaml
@@ -4,6 +4,8 @@ channel_targets:
 - conda-forge main
 docker_image:
 - condaforge/linux-anvil-comp7
+mpi:
+- nompi
 numpy:
 - '1.14'
 pin_run_as_build:
@@ -11,4 +13,4 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '3.8'
+- '2.7'
