--- a/.ci_support/linux_mpiopenmpipython3.6.yaml
+++ b/.ci_support/linux_mpiopenmpipython3.6.yaml
@@ -4,6 +4,8 @@ channel_targets:
 - conda-forge main
 docker_image:
 - condaforge/linux-anvil-comp7
+mpi:
+- openmpi
 numpy:
 - '1.14'
 pin_run_as_build:
