--- a/.ci_support/osx_mpinompipython3.8.yaml
+++ b/.ci_support/osx_mpinompipython3.8.yaml
@@ -8,6 +8,8 @@ macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
+mpi:
+- nompi
 numpy:
 - '1.14'
 pin_run_as_build:
@@ -15,4 +17,4 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '3.7'
+- '3.8'
