--- a/.ci_support/linux_mpiopenmpipython3.7.____cpython.yaml
+++ b/.ci_support/linux_mpiopenmpipython3.7.____cpython.yaml
@@ -5,7 +5,7 @@ channel_targets:
 docker_image:
 - condaforge/linux-anvil-comp7
 mpi:
-- nompi
+- openmpi
 numpy:
 - '1.14'
 pin_run_as_build:
@@ -13,4 +13,4 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '3.7'
+- 3.7.* *_cpython
