--- a/.ci_support/osx_mpimpichpython3.8.____cpython.yaml
+++ b/.ci_support/osx_mpimpichpython3.8.____cpython.yaml
@@ -1,9 +1,13 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 mpi:
 - mpich
 numpy:
@@ -13,4 +17,4 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '2.7'
+- 3.8.* *_cpython
