--- a/.ci_support/osx_mpinompipython3.8.____cpython.yaml
+++ b/.ci_support/osx_mpinompipython3.8.____cpython.yaml
@@ -9,7 +9,7 @@ macos_machine:
 macos_min_version:
 - '10.9'
 mpi:
-- mpich
+- nompi
 numpy:
 - '1.14'
 pin_run_as_build:
@@ -17,4 +17,4 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '2.7'
+- 3.8.* *_cpython
