--- a/.ci_support/osx_mpiopenmpipython3.6.____cpython.yaml
+++ b/.ci_support/osx_mpiopenmpipython3.6.____cpython.yaml
@@ -9,7 +9,7 @@ macos_machine:
 macos_min_version:
 - '10.9'
 mpi:
-- mpich
+- openmpi
 numpy:
 - '1.14'
 pin_run_as_build:
@@ -17,4 +17,4 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '3.6'
+- 3.6.* *_cpython
