--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
-{% set version = "8.1.0.beta.snapshot.32" %}
+{% set version = "8.0.1" %}
 {% set ver = version.replace(".", "_") %}
-{% set build = 0 %}
+{% set build = 1 %}
 
 # recipe-lint fails if mpi is undefined
 {% set mpi = mpi or 'nompi' %}
@@ -16,7 +16,7 @@ package:
 
 source:
   url: https://github.com/esmf-org/esmf/archive/ESMF_{{ ver }}/esmf_{{ ver }}_src.tar.gz
-  sha256: 98d15c4d62a22a577e5bf774b238421af1d0cc32c113b6037eb4c9f65fe27e73
+  sha256: 9172fb73f3fe95c8188d889ee72fdadb4f978b1d969e1d8e401e8d106def1d84
 
 build:
   number: {{ build }}
@@ -64,6 +64,5 @@ about:
 extra:
   recipe-maintainers:
     - ocefpaf
-    - bekozi
     - rokuingh
     - xylar
