--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
-{% set version = "8.0.1" %}
+{% set version = "8.1.0" %}
 {% set ver = version.replace(".", "_") %}
-{% set build = 2 %}
+{% set build = 0 %}
 
 # recipe-lint fails if mpi is undefined
 {% set mpi = mpi or 'nompi' %}
@@ -56,7 +56,7 @@ test:
     - ESMF
 
 about:
-  home: https://www.earthsystemcog.org/projects/esmpy/
+  home: http://earthsystemmodeling.org/esmpy/
   license: The University of Illinois/NCSA
   license_file: LICENSE
   summary: ESMPy is a Python interface to the Earth System Modeling Framework (ESMF) regridding utility.
